# ci-corehard

./: .clang-format  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  appveyor.yml.disabled  azure-pipelines.yml  conanfile.py  conanfile.txt  fmt.sh
include/hello/: hello.h
scripts/: run-artifactory.sh  run-gitlab-runner.sh  run-gitlab.sh
src/: hello.cpp  main.cpp
test_package/: CMakeLists.txt  conanfile.py
tests/: test_hello.cpp
